[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
description = "CroftSoft String Library"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-keywords-field
# keywords = ["keyword"]
# Remark this line out if your project is not open source
license = "MIT"
name = "com-croftsoft-lib-string"
# Change this value to true when you publish to crates.io
publish = true
readme = "README.md"
# Remark this line out if your project is not in a code repository
repository = "https://github.com/david-wallace-croft/com-croftsoft-lib-string"
version = "0.1.0"

[dependencies]
# No dependencies
